# graduation_thesis

./: .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml  test.py
learning/: llm开发学习路线.md
src/: api.yaml  config.yaml
src/agent/: agent.py  prompts.py
src/agent/kara_qa/: __init__.py
src/agent/londa/: __init__.py
src/api/: dependencies.py
src/api/routers/: chat.py  index.py  pdf.py
src/common/: __init__.py  basemodel.py  context.py  logger.py  mcp.py  middleware.py  paths.py  prompts.py  tools.py  utils.py
src/common/.ipynb_checkpoints/: mineru_parse_pdf-checkpoint.py  mineru_pipeline_all-checkpoint.py
src/common/models/: __init__.py  openai_compatible.py  vllm.py
src/core/: config.py  events.py
src/dao/: file_manager.py
src/services/fileparse_service/: mineru_parse_pdf_service.py
src/services/index_service/: test_blip.ipynb
src/storage/db/: metadata.sqlite
storage/artifacts/f_656c1fd4/auto/: f_656c1fd4_content_list.json  f_656c1fd4_page_content.json  output.md
storage/artifacts/f_912345b1/auto/: f_912345b1_content_list.json  f_912345b1_page_content.json  output.md
storage/artifacts/f_ae00bbc2/auto/: f_ae00bbc2.md  f_ae00bbc2_content_list.json  f_ae00bbc2_page_content.json
storage/artifacts/f_fcf0824c/auto/: f_fcf0824c_content_list.json  f_fcf0824c_page_content.json  output.md
storage/db/: metadata.sqlite
